# chronicle

./: .gitignore  AGENTS.md  justfile  pyproject.toml
.local/: README.md
docs/: M00_world_engine.md
scripts/: generate_index.py
src/chronicle/world/: __init__.py  actors.py  cells.py  engine.py  schema.py
tests/chronicle/world/: test_actors.py  test_cells.py  test_engine.py  test_schema.py
