[project]
name = "chronicle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.409,<2",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
    "pytest-gremlins>=1.8.1,<2",
    "pytest-html>=4.2.0,<5",
    "pytest-watcher>=0.4.3,<1",
    "pytest-xdist>=3.8.0,<4",
    "pytest>=9.0.3,<10",
    "ruff>=0.15.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chronicle"]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--import-mode=importlib",
    "--cov-report=html:build/reports/pytest-cov",
    "--html=build/reports/pytest-html/index.html",
    "--self-contained-html",
]

testpaths = ["tests"]
asyncio_mode = "auto"
cache_dir = "build/cache/pytest"
norecursedirs = [".git", ".venv", "mutants"]
python_files = ["test_*.py"]
markers = [
    "unit: fast isolated tests with no infrastructure or app wiring",
    "integration: tests using in-memory adapters and composed application modules",
    "e2e: tests against real infrastructure (databases, brokers, external services)",
]

[tool.pytest-gremlins]
paths = ["src", "tests"]
exclude = [".venv", "**/__pycache__", "**/.*/**", "**/node_modules"]
report = ["console", "html"]
cache = true
batch_size = 20
max_pardons = 10
max-pardons-pct = 5.0
workers = "auto"

[tool.coverage.run]
branch = true
data_file = "build/cache/coverage/.coverage"

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "build/reports/pytest-cov"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = [".venv", "**/__pycache__", "**/.*/**", "**/node_modules", "build/**"]

[tool.ruff]
line-length = 88
target-version = "py314"
cache-dir = "build/cache/ruff"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "C90", # mccabe complexity
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
